commented plyr.js

--- a/index.html
+++ b/index.html
@@ -42,15 +42,6 @@
           type="font/woff2"
           href="https://cdn.plyr.io/static/fonts/gordita-bold.woff2" />
 
-    <!-- Google Analytics-->
-    <script>
-        //window.dataLayer = window.dataLayer || [];
-        //function gtag() {
-        //    dataLayer.push(arguments);
-        //}
-        //gtag('js', new Date());
-        //gtag('config', 'UA-132699580-1');
-    </script>
 </head>
 
 <body>
@@ -68,11 +59,7 @@
                 </button>,            </p>
 
             <p>
-                <!--Premium video monetization from
-                <a href="https://vi.ai/publisher-video-monetization/?aid=plyrio" target="_blank" class="no-border">
-                    <img src="https://cdn.plyr.io/static/vi-logo-24x24.svg" alt="ai.vi" />
-                    <span class="sr-only">ai.vi</span>
-                </a>-->
+
             </p>
 
             <div class="call-to-action">
@@ -124,8 +111,7 @@
 
         }
     </script>
-    <script src="https://cdn.plyr.io/3.6.4/plyr.js"></script>
-
+    <!--<script src="https://cdn.plyr.io/3.6.4/plyr.js"></script>-->
     <script src="https://cdn.plyr.io/3.6.4/demo.js" crossorigin="anonymous"></script>
 </body>
 </html>
