--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         }
     </script>
-    <!--<script src="https://cdn.plyr.io/3.6.4/plyr.js"></script>-->
+    <script src="https://cdn.plyr.io/3.6.4/plyr.js"></script>
     <script src="https://cdn.plyr.io/3.6.4/demo.js" crossorigin="anonymous"></script>
 </body>
 </html>
