developed by bit

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
             <title></title>
         </svg>
         <p>
-            All rights reserved by
+            Developed By
             <a href="http://bitblazers.io" target="_blank">
-                Bitblazers.io©
+                Bitblazers.io
             </a>
         </p>
     </aside>
