--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>ONLINE Player Link - Play Videos With LINK</title>
+    <title>Plyr - A simple, customizable HTML5 Video, Audio, YouTube and Vimeo player</title>
     <meta name="description"
           property="og:description"
           content="A simple HTML5 media player with custom controls and WebVTT captions." />
@@ -42,13 +42,22 @@
           type="font/woff2"
           href="https://cdn.plyr.io/static/fonts/gordita-bold.woff2" />
 
+    <!-- Google Analytics-->
+    <script>
+        //window.dataLayer = window.dataLayer || [];
+        //function gtag() {
+        //    dataLayer.push(arguments);
+        //}
+        //gtag('js', new Date());
+        //gtag('config', 'UA-132699580-1');
+    </script>
 </head>
 
 <body>
     <div class="grid">
         <header>
             <!--<h1>ONLINE Video Player</h1>-->
-            <h1>ONLINE<span>Video</span>Player <span>With</span>LINK.</h1>
+            <h1>ONLINE<span>Video</span>Player<span>With</span>LINK.</h1>
             <p>
                 Play Any Video With Link.
                 <button type="button" class="faux-link" data-source="video">
@@ -56,14 +65,25 @@
                         <title>HTML5</title>
                         <path d="M14.738.326C14.548.118 14.28 0 14 0H2c-.28 0-.55.118-.738.326S.98.81 1.004 1.09l1 11c.03.317.208.603.48.767l5 3c.16.095.338.143.516.143s.356-.048.515-.143l5-3c.273-.164.452-.45.48-.767l1-11c.026-.28-.067-.557-.257-.764zM12 4H6v2h6v5.72l-4 1.334-4-1.333V9h2v1.28l2 .666 2-.667V8H4V2h8v2z"></path>
                     </svg>Video
-                </button>,            </p>
+                </button>,
+                <button type="button" class="faux-link" data-source="audio">
+                    <svg class="icon">
+                        <title>HTML5</title>
+                        <path d="M14.738.326C14.548.118 14.28 0 14 0H2c-.28 0-.55.118-.738.326S.98.81 1.004 1.09l1 11c.03.317.208.603.48.767l5 3c.16.095.338.143.516.143s.356-.048.515-.143l5-3c.273-.164.452-.45.48-.767l1-11c.026-.28-.067-.557-.257-.764zM12 4H6v2h6v5.72l-4 1.334-4-1.333V9h2v1.28l2 .666 2-.667V8H4V2h8v2z"></path>
+                    </svg>Audio
+                </button>,
+            </p>
 
             <p>
-
+                Premium video monetization from
+                <a href="https://vi.ai/publisher-video-monetization/?aid=plyrio" target="_blank" class="no-border">
+                    <img src="https://cdn.plyr.io/static/vi-logo-24x24.svg" alt="ai.vi" />
+                    <span class="sr-only">ai.vi</span>
+                </a>
             </p>
 
             <div class="call-to-action">
-                <input style="width: 95%; height: 50px;" type="text" class="txtlink" placeholder="Paste Video Link HERE" id="txtlink" />
+                <input type="text" class="txtlink" placeholder="Paste Video Link HERE" id="txtlink" />
                 <!--<button class="btnget" onclick="getLink()">get</button>-->
                 <br><br>
                 <a onclick="getLink()" class="button js-shr">
@@ -112,6 +132,7 @@
         }
     </script>
     <script src="https://cdn.plyr.io/3.6.4/plyr.js"></script>
+
     <script src="https://cdn.plyr.io/3.6.4/demo.js" crossorigin="anonymous"></script>
 </body>
 </html>
