added customize textbox

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </p>
 
             <div class="call-to-action">
-                <input type="text" class="txtlink" placeholder="Paste Video Link HERE" id="txtlink" />
+                <input style="width: 95%; height: 50px;" type="text" class="txtlink" placeholder="Paste Video Link HERE" id="txtlink" />
                 <!--<button class="btnget" onclick="getLink()">get</button>-->
                 <br><br>
                 <a onclick="getLink()" class="button js-shr">
