--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
                        autoplay
                        crossorigin
                        playsinline
-                       id="player">
+                       id="player"
+                       src="Nature.mp4"
+                       >
                 </video>
 
             </div>
