--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     </script>
 </head>
 
-<body>
-    <div class="grid">
+<body style="background-color: rgb(23,27,38);">
+    <div class="grid" style="background-color: rgb(23,27,38);">
         <header>
             <!--<h1>ONLINE Video Player</h1>-->
             <h1>ONLINE<span>Video</span>Player<span>With</span>LINK.</h1>
-            <p>
+            <p style="color:rgb(221, 221, 221);">
                 Play Any Video With Link.
                 <button type="button" class="faux-link" data-source="video">
                     <svg class="icon">
@@ -69,7 +69,7 @@
             </p>
             
             <div class="call-to-action">
-                <input style="width: 95%; height: 50px;" type="text" class="txtlink" placeholder="Paste Video Link HERE" id="txtlink" />
+                <input style="width: 95%; height: 50px; background-color:rgb(221, 221, 221);"" type="text" class="txtlink" placeholder="Paste Video Link HERE" id="txtlink" />
                 <!--<button class="btnget" onclick="getLink()">get</button>-->
                 <br><br>
                 <a onclick="getLink()" class="button js-shr">
@@ -97,11 +97,11 @@
         </main>
     </div>
 
-    <aside>
-        <svg class="icon">
+    <aside style="background-color: rgb(48, 55, 68);">
+          <svg class="icon">
             <title></title>
-        </svg>
-        <p>
+          </svg>
+        <p style="color:rgb(221, 221, 221);">
             Developed By
             <a href="http://bitblazers.io" target="_blank">
                 Bitblazers.io
