--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Plyr - A simple, customizable HTML5 Video, Audio, YouTube and Vimeo player</title>
+    <title>Online Video Player With Link</title>
     <meta name="description"
           property="og:description"
           content="A simple HTML5 media player with custom controls and WebVTT captions." />
