add href footer

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           </svg>
         <p style="color:rgb(221, 221, 221);">
             Developed By
-            <a href="http://bitblazers.io" target="_blank">
-                Bitblazers.io
+            <a href="https://github.com/AkaiGEN" target="_blank">
+                AkaiGEN
             </a>
         </p>
     </aside>
