--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Icons -->
-    <link rel="icon" href="https://github.com/Geeth-AK-07/Oplayerlink.github.io/blob/main/Favicon.ico?raw=true">
+    <link rel="icon" href="https://raw.githubusercontent.com/Geeth-AK-07/Oplayerlink.github.io/main/Favicon.ico">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Plyr - A simple, customizable HTML5 Video, Audio, YouTube and Vimeo player" />
