--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Icons -->
-    <link rel="icon" href="https://raw.githubusercontent.com/Geeth-AK-07/Oplayerlink.github.io/main/Favicon.ico">
-
+    <link rel="icon" href="./img/Favicon.ico">
+    
     <!-- Open Graph -->
     <meta property="og:title" content="Plyr - A simple, customizable HTML5 Video, Audio, YouTube and Vimeo player" />
     <meta property="og:site_name" content="Plyr" />
