--- a/index.html
+++ b/index.html
@@ -39,10 +39,15 @@
           crossorigin
           type="font/woff2"
           href="https://cdn.plyr.io/static/fonts/gordita-bold.woff2" />
+    <style>
+        ::-webkit-scrollbar {
+        display: none;
+        }
+    </style>
 </head>
 
 <body style="background-color: rgb(23,27,38);">
-    <div class="grid" style="background-color: rgb(23,27,38); overflow: hidden;">
+    <div class="grid" style="background-color: rgb(23,27,38);">
         <header>
             <!--<h1>ONLINE Video Player</h1>-->
             <h1>ONLINE<span>Video</span>Player<span>With</span>LINK.</h1>
