--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
             </div>
         </header>
         <main>
-                <video  controls
-                       
+                <video  
+                       controls 
                        playsinline
+                       autoplay
                        id="player"
                        class="js-player"
                        src="Nature.mp4"
