--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </svg>
         <p style="color:rgb(221, 221, 221);">
             Developed By
-            <a href="https://github.com/Geeth-AK-07/Oplayerlink.github.io" target="_blank">
+            <a href="https://github.com/Geeth-AK-07/Oplayer" target="_blank">
                 AkaiGEN
             </a>
         </p>
