add autoclear to textbox

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </p>
             
             <div class="call-to-action">
-                <input style="width: 95%; height: 50px; background-color:rgb(221, 221, 221);"" type="text" class="txtlink" placeholder="Paste Video Link HERE" id="txtlink" />
+                <input style="width: 95%; height: 50px; background-color:rgb(221, 221, 221);"" type="text" class="txtlink" onfocus="this.value=''" placeholder="Paste Video Link HERE" id="txtlink" />
                 <!--<button class="btnget" onclick="getLink()">get</button>-->
                 <br><br>
                 <a onclick="getLink()" class="button js-shr">
