--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </header>
         <main>
-            <video controls playsinline autoplay id="player" class="js-player" src="https://jell.yfish.us/media/jellyfish-3-mbps-hd-h264.mkv">
+            <video controls playsinline autoplay id="player" class="js-player" src="./video.mp4">
             </video>
 
     </div>
