footer link changed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 Plyr
             </a>
             Modified By
-            <a href="https://github.com/Geeth-AK-07/Oplayer" target="_blank">
+            <a href="https://github.com/geethakash" target="_blank">
                 AkaiGEN
             </a>
         </p>
